--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 ---
 theme :
-  name : bootstrap-3
+  name : custom
 ---
 {% include JB/setup %}
-{% include themes/bootstrap-3/default.html %}
+{% include themes/custom/default.html %}
