--- a/_includes/themes/custom/default.html
+++ b/_includes/themes/custom/default.html
@@ -62,6 +62,14 @@
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
+            <!-- Accounts dropdown -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Accounts <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                {% if site.author.twitter %}<li><a href="https://twitter.com/{{ site.author.twitter }}">Twitter</a></li>{% endif %}
+                  {% if site.author.github %}<li><a href="https://github.com/{{ site.author.github }}">GitHub</a></li>{% endif %}
+              </ul>
+            </li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
             <div class="form-group">
